// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with expense count of 1 1`] = `
<div>
  <p>
    Viewing 
    1
     expenses totalling 
    $45.00
  </p>
</div>
`;

exports[`should render ExpensesSummary with expense count of more than 1 1`] = `
<div>
  <p>
    Viewing 
    2
     expenses totalling 
    $1,140.00
  </p>
</div>
`;
